# conduit-etl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
conduit_etl/: __init__.py  cli.py  config.py
conduit_etl/catalog/: base.py  local.py  s3.py
conduit_etl/core/: dag.py  decorators.py  errors.py  fingerprint.py  models.py  registry.py  runtime.py
conduit_etl/executor/: base.py  distributed.py  local.py
conduit_etl/metrics/: prometheus.py
conduit_etl/queue/: base.py  memory.py  postgres.py  sqlite.py
conduit_etl/sinks/: kafka.py  parquet.py  postgres.py
conduit_etl/sources/: file.py  kafka.py  poll.py
conduit_etl/worker/: metrics_server.py  process.py  server.py
examples/opensky/: .gitignore  CLAUDE.md  README.md  pipeline.toml  pyproject.toml  run_once.sh  run_scheduler.sh
examples/opensky/output/airport_traffic/: latest.parquet
examples/opensky/output/airspace_snapshot/: latest.parquet
examples/opensky/output/busy_corridors/: latest.parquet
examples/opensky/output/country_stats/: latest.parquet
examples/opensky/pipeline/sinks/: parquet.py
examples/opensky/pipeline/sources/: airports.py  opensky.py
examples/opensky/pipeline/steps/: airport_traffic.py  clean.py  corridors.py  country_stats.py  enrich.py  snapshot.py
examples/opensky/queries/: busiest_airports.sql  corridor_heatmap.sql  whats_flying_now.sql
examples/opensky/tests/: conftest.py  test_aggregations.py  test_clean.py  test_enrich.py
examples/opensky/tests/fixtures/: airports_sample.csv  opensky_response.json
tests/: test_catalog_local.py  test_dag.py  test_decorators.py  test_distributed_executor.py  test_fingerprint.py  test_fixes.py  test_incremental.py  test_models.py  test_phase3.py  test_queue_sqlite.py  test_registry.py  test_runtime.py  test_scheduler_server.py
