[project]
name = "conduit-etl"
dynamic = ["version"]
description = "A lightweight Python pipeline runtime for data engineering teams who cannot or will not use cloud-managed services."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mark Harris", email = "markwharris77@gmail.com" }]
keywords = ["etl", "data-engineering", "pipeline", "duckdb", "ducklake"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "duckdb>=1.2.0",
    "click>=8.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.0"]
postgres = ["psycopg[binary]>=3.1"]
all = ["confluent-kafka>=2.0", "psycopg[binary]>=3.1"]

[project.scripts]
conduit = "conduit_etl.cli:main"

[project.urls]
Homepage = "https://github.com/markwharris77/conduit-etl"
Repository = "https://github.com/markwharris77/conduit-etl"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["conduit_etl"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["conduit_etl", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["conduit_etl"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["duckdb.*", "confluent_kafka.*", "psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["conduit_etl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
